mobile fix for text overflow on small devices

--- a/src/styles/drivergrid.scss
+++ b/src/styles/drivergrid.scss
@@ -99,6 +99,9 @@
         @include respond(phone-2) {
             width: 75%;
         }
+        @include respond(phone-3) {
+            width: 80%;
+        }
 
         &--country {
             display: block;
@@ -144,6 +147,11 @@
             font-size: 6rem;
             line-height: 7rem;
             letter-spacing: 0.4rem;
+
+            @include respond(phone-3) {
+                font-size: 5.2rem;
+                letter-spacing: 0.22rem;
+            }
         }
     }
 
@@ -179,7 +187,7 @@
     position: relative;
     width: 100%;
     border-radius: 4px;
-    background: rgba($color-black, 0.15);
+    background: rgba($color-black, 0.185);
     color: $color-white;
 
     transition: all 200ms;
